Fix #11394: Make dropdown visible over a modal

--- a/less/modals.less
+++ b/less/modals.less
@@ -53,6 +53,11 @@
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: none;
+
+  // Make dropdown visible over a modal
+  .dropdown-menu {
+    z-index: @zindex-modal-dropdown;
+  }
 }
 
 // Modal background
